--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node ./bin/www"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "yarn": "1.x"
   },
   "dependencies": {
     "autoprefixer": "^9.7.4",
@@ -38,7 +39,8 @@
     "pug": "^2.0.4",
     "slugify": "^1.4.0",
     "user-info": "^2.0.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "parcel-bundler": "^1.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -53,7 +55,6 @@
     "@editorjs/inline-code": "^1.3.1",
     "@editorjs/link": "^2.1.3",
     "@editorjs/list": "^1.4.0",
-    "parcel-bundler": "^1.12.4",
     "postcss-color-mod": "^0.0.1",
     "postcss-color-mod-function": "^3.0.3",
     "postcss-modules": "^1.5.0",
