--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -31,6 +32,7 @@
     "morgan": "^1.9.1",
     "node-vibrant": "^3.2.0-alpha",
     "nodemon": "^2.0.2",
+    "parcel-bundler": "^1.12.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "postcss": "^7.0.27",
@@ -39,8 +41,7 @@
     "pug": "^2.0.4",
     "slugify": "^1.4.0",
     "user-info": "^2.0.0",
-    "uuid": "^7.0.2",
-    "parcel-bundler": "^1.12.4"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
