--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development PORT=3000 nodemon ./bin/www",
+    "dev": "NODE_ENV=development PORT=5000 nodemon ./bin/www",
     "start": "NODE_ENV=production node ./bin/www"
   },
   "engines": {
@@ -39,6 +39,7 @@
     "postcss-import": "^12.0.1",
     "precss": "^4.0.0",
     "pug": "^2.0.4",
+    "react-router-dom": "^5.1.2",
     "slugify": "^1.4.0",
     "user-info": "^2.0.0",
     "uuid": "^7.0.2"
